:lipstick: update on sliders arrows and 'see all'

--- a/src/index.html
+++ b/src/index.html
@@ -216,7 +216,7 @@
         <aside class="aside-like">
           <div class="row">
             <div class="col-sm-0 col-md-0 col-lg-2"></div>
-            <h3>Derniers articles</h3>
+            <h3>Vous aimerez aussi</h3>
           </div>
           <div class="aside-slider d-lg-none d-xl-none">
             <div class="slider-item">
@@ -251,9 +251,13 @@
           <!--------------------------------------------------------------------large slider----------------------------------------------------------------------->
           <div class="arrows-larger d-lg-block d-xl-block">
               <div class="d-flex justify-content-end">
-                <p class="see-all d-none d-lg-block d-xl-block">Tout voir</p>
-                <img height="25px" src="images/svg/nav-arrow-left.svg" alt="">
-                <img height="25px" src="images/svg/nav-arrow-right.svg" alt="">
+                <p class="see-all d-none d-lg-block d-xl-block text-uppercase">Tout voir</p>
+                <div class="prev-arrow">
+                  <img  height="25px" src="images/svg/nav-arrow-left.svg" alt="">
+                </div>
+                <div class="next-arrow">
+                  <img height="25px" src="images/svg/nav-arrow-right.svg" alt="">
+                </div>
             </div>
           </div>
           <div class="aside-slider-large d-none d-lg-block d-xl-block">
@@ -331,14 +335,18 @@
             </div>
           </div>
 
-          <!-------------------------------------------------------------------------------large slider---------------------------------------------------------------------------->
+          <!--------------------------------------------------------------------large slider----------------------------------------------------------------------->
           <div class="arrows-larger d-lg-block d-xl-block">
-            <div class="d-flex justify-content-end">
-              <p class="see-all d-none d-lg-block d-xl-block">Tout voir</p>
-              <img height="25px" src="images/svg/nav-arrow-left.svg" alt="">
-              <img height="25px" src="images/svg/nav-arrow-right.svg" alt="">
+              <div class="d-flex justify-content-end">
+                <p class="see-all d-none d-lg-block d-xl-block text-uppercase">Tout voir</p>
+                <div class="prev-arrow">
+                  <img  height="25px" src="images/svg/nav-arrow-left.svg" alt="">
+                </div>
+                <div class="next-arrow">
+                  <img height="25px" src="images/svg/nav-arrow-right.svg" alt="">
+                </div>
+            </div>
           </div>
-        </div>
           <div class="aside-slider-large d-none d-lg-block d-xl-block">
             <div class="slider-item border-0">
               <div class="card border-0" style="width: 18rem;">
